# figures

./: README.md  pyproject.toml  test.py
.github/workflows/: main.yml
Figure/: setup.py
Figure/Figure/: __init__.py  circle.py  detector_figures.py  exceptions.py  figure.py  square_figure.py  triangle.py
Figures/: runner.py  setup.py
Figures/FiguresLib/: __init__.py  circle.py  triangle.py
Figures/tests/: main_tests.py
Figures/utils/: command_interface.py  detector_figures.py  exceptions.py
src/Figures/FiguresLib/: BaseFigure.py  circle.py  triangle.py
src/Figures/utils/: command_interface.py  detector_figures.py  runner.py
tests/: main_tests.py
